Added activemq.conf.bat for windows conf